TIKZ vertical alignment

--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -33,6 +33,12 @@
 \ifthenelse{\boolean{@b_extpack_use_tikz}}{
 
 %% --------------------
+%% Alignment
+%% --------------------
+    
+    \tikzset{baseline=(current bounding box.center)}
+
+%% --------------------
 %% Size
 %% --------------------
 
