--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -115,7 +115,7 @@
     \setboolean{@b_maths_use_theoremEnvs}{true}
 }
 
-%% +maths.misc
+%% +maths.arrows
 \DeclareOption{+maths.arrows}{
     \setboolean{@b_maths_use_arrows}{true}
 }
