--- a/kappak.sty
+++ b/kappak.sty
@@ -61,6 +61,7 @@
 
 % wheaver tikz is used
 \newboolean{@b_extpack_use_tikz}            \setboolean{@b_extpack_use_tikz}            {false}
+\newboolean{@b_extpack_tikz_externalize}    \setboolean{@b_extpack_tikz_externalize}    {false}
 
 %% ----------------------------------------
 %% maths
