--- a/kappak-maths.tex
+++ b/kappak-maths.tex
@@ -248,6 +248,6 @@
     
     \renewcommand{\epsilon}{\varepsilon}
     
-    \newcommand{\yoneda}{\text{よ}}
+    \newcommand{\yoneda}{\mathsf{y}} %\newcommand{\yoneda}{\text{よ}}
     
 }{} % \ifthenelse{\boolean{@b_maths_use_misc}}{
