--- a/kappak.sty
+++ b/kappak.sty
@@ -59,7 +59,8 @@
 %% extpack
 %% ----------------------------------------
 
-% wheaver tikz is used
+\newboolean{@b_extpack_use_stix}			\setboolean{@b_extpack_use_stix}			{false}
+
 \newboolean{@b_extpack_use_tikz}            \setboolean{@b_extpack_use_tikz}            {false}
 \newboolean{@b_extpack_tikz_externalize}    \setboolean{@b_extpack_tikz_externalize}    {false}
 
