--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -151,9 +151,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \\
-                \displaystyle{#3} \& \displaystyle{#4} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \\
+                \displaystyle{#3} \@ampersand \displaystyle{#4} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$#6$} (m-2-1);
@@ -173,9 +173,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \\
-                \displaystyle{#3} \& \displaystyle{#4} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \\
+                \displaystyle{#3} \@ampersand \displaystyle{#4} \\
             };
             \path (m-1-1) edge [-, draw = white] node [inline] {\mbox{\LARGE{$\ulcorner$}}} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
@@ -196,9 +196,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5 ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \\
-                \displaystyle{#3} \& \displaystyle{#4} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \\
+                \displaystyle{#3} \@ampersand \displaystyle{#4} \\
             };
             \path (m-1-1) edge [-, draw = white] node [inline] {\mbox{\LARGE{$\lrcorner$}}} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
@@ -219,9 +219,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \\
-                \displaystyle{#3} \& \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \\
+                \displaystyle{#3} \@ampersand \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]       {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]        {$#5$} (m-2-1);
@@ -240,9 +240,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \\
-                \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \\
+                \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]      {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [below left] {$#5$} (m-2-2);
@@ -261,9 +261,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \\
-                \displaystyle{#2} \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \\
+                \displaystyle{#2} \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [left]        {$#4$} (m-2-1);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [above right] {$#5$} (m-2-2);
@@ -282,9 +282,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \& \displaystyle{#1} \\
-                \displaystyle{#2} \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \@ampersand \displaystyle{#1} \\
+                \displaystyle{#2} \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-2-1) edge [\@diagLA] node [above left] {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [right]      {$#5$} (m-2-2);
@@ -303,9 +303,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \& \displaystyle{#1} \& \\
-                \displaystyle{#2} \& \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \@ampersand \displaystyle{#1} \@ampersand \\
+                \displaystyle{#2} \@ampersand \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-2) edge [\@diagLA] node [above left]  {$#4$} (m-2-1);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [above right] {$#5$} (m-2-3);
@@ -323,10 +323,10 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \& \displaystyle{#1} \\
-                \displaystyle{#2} \& \\
-                \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \@ampersand \displaystyle{#1} \\
+                \displaystyle{#2} \@ampersand \\
+                \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-2-1) edge [\@diagLA] node [above left] {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [right]      {$#5$} (m-3-2);
@@ -345,10 +345,10 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \\
-                \& \displaystyle{#2} \\
-                \displaystyle{#3} \& \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \\
+                \@ampersand \displaystyle{#2} \\
+                \displaystyle{#3} \@ampersand \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [left]        {$#4$} (m-3-1);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [above right] {$#5$} (m-2-2);
@@ -367,9 +367,9 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \& \displaystyle{#2} \\
-                \& \displaystyle{#3} \& \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \@ampersand \displaystyle{#2} \\
+                \@ampersand \displaystyle{#3} \@ampersand \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]       {$#4$} (m-1-3);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [below left]  {$#5$} (m-2-2);
@@ -388,8 +388,8 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-1)                    edge [\@diagLA] node [above] {$#4$} (m-1-2);
             \path [\@diagAB] ($(m-1-2.east) + (0,0.1)$) edge [\@diagLB] node [above] {$#5$} ($(m-1-3.west) + (0,0.1)$);
@@ -408,8 +408,8 @@
                     column sep = \@tColsep em,
                     text height = 1.5ex,
                     text depth = 0.25ex,
-                    ampersand replacement = \&] {
-                \displaystyle{#1} \& \displaystyle{#2} \& \displaystyle{#3} \\
+                    ampersand replacement = \@ampersand] {
+                \displaystyle{#1} \@ampersand \displaystyle{#2} \@ampersand \displaystyle{#3} \\
             };
             \path [\@diagAA] ($(m-1-1.east) + (0,0.1)$) edge [\@diagLA] node [above] {$#4$} ($(m-1-2.west) + (0,0.1)$);
             \path [\@diagAB] ($(m-1-1.east) - (0,0.1)$) edge [\@diagLB] node [below] {$#5$} ($(m-1-2.west) - (0,0.1)$);
