--- a/kappak.sty
+++ b/kappak.sty
@@ -64,6 +64,8 @@
 \newboolean{@b_extpack_use_tikz}            \setboolean{@b_extpack_use_tikz}            {false}
 \newboolean{@b_extpack_tikz_externalize}    \setboolean{@b_extpack_tikz_externalize}    {false}
 
+\newboolean{@b_extpack_use_xecjk}			\setboolean{@b_extpack_use_xecjk}			{false}
+
 %% ----------------------------------------
 %% maths
 %% ----------------------------------------
