--- a/src/kappak.sty
+++ b/src/kappak.sty
@@ -393,9 +393,6 @@
 	}
 }{}
 
-%\RequirePackage[notext]{stix}
-%\let\barV\relax
-
 \newcommand{\@bb}{\mathbb}
 \ifthenelse{\equal{\@bbStyle}{bbold}}{
     \RequirePackage{bbold}
@@ -2556,7 +2553,7 @@
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$#6$} (m-2-1);
             \path [\@diagAC] (m-1-2) edge [\@diagLC] node [right] {$#7$} (m-2-2);
-            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [above] {$#8$} (m-2-2);
+            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [below] {$#8$} (m-2-2);
         \end{tikzpicture}
     }
     
@@ -2579,7 +2576,7 @@
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$#6$} (m-2-1);
             \path [\@diagAC] (m-1-2) edge [\@diagLC] node [right] {$#7$} (m-2-2);
-            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [above] {$#8$} (m-2-2);
+            \path [\@diagAD] (m-2-1) edge [\@diagLD] node [below] {$#8$} (m-2-2);
         \end{tikzpicture}
     }
     
